--- a/bibigrid-core/src/main/resources/playbook/roles/worker/tasks/021-slurm.yml
+++ b/bibigrid-core/src/main/resources/playbook/roles/worker/tasks/021-slurm.yml
@@ -10,3 +10,4 @@
     name: slurmd
     enabled: True
     state: restarted
+  when: slurm_conf is changed or slurm_cggroup_conf is changed or SLURM_cgroup_allowed_devices_conf is changed
