--- a/bibigrid-core/src/main/resources/playbook/site.yml
+++ b/bibigrid-core/src/main/resources/playbook/site.yml
@@ -1,14 +1,18 @@
 - hosts: master
   become: 'yes'
   vars_files:
-  - vars/common.yml
+  - vars/login.yml
+  - vars/instances.yml
+  - vars/common_configuration.yml
   roles:
   - common
   - master
 - hosts: workers
   become: 'yes'
   vars_files:
-  - vars/common.yml
+  - vars/login.yml
+  - vars/instances.yml
+  - vars/common_configuration.yml
   - vars/{{ ansible_default_ipv4.address }}.yml
   roles:
   - common
