--- a/bibigrid-light-rest-4j/src/main/resources/config/server.yml
+++ b/bibigrid-light-rest-4j/src/main/resources/config/server.yml
@@ -12,16 +12,16 @@ httpPort: ${server.httpPort:8080}
 # When enableHttp, you must set enableHttps to false, otherwise, this flag will be ignored. There is
 # only one protocol will be used for the server at anytime. If both http and https are true, only
 # https listener will be created and the server will bind to https port only.
-enableHttp: ${server.enableHttp:true}
+enableHttp: ${server.enableHttp:false}
 
 # Https port if enableHttps is true. It will be ignored if dynamicPort is true.
 httpsPort: ${server.httpsPort:8443}
 
 # Enable HTTPS should be true on official environment and most dev environments.
-enableHttps: ${server.enableHttps:false}
+enableHttps: ${server.enableHttps:true}
 
 # Http/2 is enabled by default for better performance and it works with the client module
-enableHttp2: ${server.enableHttp2:false}
+enableHttp2: ${server.enableHttp2:true}
 
 # Keystore file name in config folder. KeystorePass is in secret.yml to access it.
 keystoreName: ${server.keystoreName:server.keystore}
