adjust slurm configuration to fit Ubuntu 20.04

--- a/bibigrid-core/src/main/resources/playbook/roles/common/templates/slurm/slurm.conf
+++ b/bibigrid-core/src/main/resources/playbook/roles/common/templates/slurm/slurm.conf
@@ -18,7 +18,7 @@ PartitionName=debug Nodes={% if use_master_as_compute == 'yes' %}{{master.hostna
 #AccountingStorageType=accounting_storage/slurmdbd
 #AccountingStorageHost=lxcc01
 #JobAcctGatherType=jobacct_gather/linux
-{% if ansible_distribution == 'Debian' and ansible_distribution_release == 'buster' %}
+{% if (ansible_distribution == 'Ubuntu' and ansible_distribution_release == 'focal') or (ansible_distribution == 'Debian' and ansible_distribution_release == 'buster') %}
 # Debian 10 "buster" slurm package needs clustername to be set
 ClusterName=bibigrid
 {% endif %}
@@ -54,7 +54,7 @@ SlurmdPidFile=/var/run/slurm-llnl/slurmd.pid
 {% endif %}
 
 # SCHEDULING
-FastSchedule=2
+# FastSchedule=2
 
 # ERROR RECOVERY
 ReturnToService=2
