adjust slurm config (remove real memory option for worker nodes) fix zabbix template name

--- a/bibigrid-core/src/main/resources/playbook/roles/common/templates/slurm/slurm.conf
+++ b/bibigrid-core/src/main/resources/playbook/roles/common/templates/slurm/slurm.conf
@@ -5,10 +5,12 @@ CryptoType=crypto/munge
 SlurmUser=slurm
 
 # NODE CONFIGURATIONS
-NodeName={{ master.hostname }} SocketsPerBoard={{ master.cores }} CoresPerSocket=1 RealMemory={{ master.memory }}
+#NodeName={{ master.hostname }} SocketsPerBoard={{ master.cores }} CoresPerSocket=1 RealMemory={{ master.memory }}
+NodeName={{ master.hostname }} SocketsPerBoard={{ master.cores }} CoresPerSocket=1
 {% set sl = [] %}
 {% for worker in workers %}
-NodeName={{ worker.hostname }} SocketsPerBoard={{ worker.cores }} CoresPerSocket=1 RealMemory={{ worker.memory }} {{ sl.append(worker.hostname)}}
+#NodeName={{ worker.hostname }} SocketsPerBoard={{ worker.cores }} CoresPerSocket=1 RealMemory={{ worker.memory }} {{ sl.append(worker.hostname)}}
+NodeName={{ master.hostname }} SocketsPerBoard={{ master.cores }} CoresPerSocket=1 State=Cloud {{ sl.append(worker.hostname) }}
 {% endfor %}
 
 # PARTITION CONFIGURATIONS
