--- a/bibigrid-core/src/main/resources/playbook/roles/master/tasks/002-zabbix.yml
+++ b/bibigrid-core/src/main/resources/playbook/roles/master/tasks/002-zabbix.yml
@@ -142,7 +142,7 @@
     host_groups:
       - 'Linux servers'
     link_templates:
-      - 'Template OS Linux Zabbix Agent' # new in Zabbix 4.4
+      - 'Template OS Linux by Zabbix Agent' # new in Zabbix 4.4
     interfaces:
       - type: 1 # agent
         main: 1 # default
