--- a/bibigrid-core/src/main/resources/playbook/roles/common/templates/slurm/slurm.conf
+++ b/bibigrid-core/src/main/resources/playbook/roles/common/templates/slurm/slurm.conf
@@ -10,7 +10,7 @@ NodeName={{ master.hostname }} SocketsPerBoard={{ master.cores }} CoresPerSocket
 {% set sl = [] %}
 {% for worker in workers %}
 #NodeName={{ worker.hostname }} SocketsPerBoard={{ worker.cores }} CoresPerSocket=1 RealMemory={{ worker.memory }} {{ sl.append(worker.hostname)}}
-NodeName={{ master.hostname }} SocketsPerBoard={{ master.cores }} CoresPerSocket=1 State=Cloud {{ sl.append(worker.hostname) }}
+NodeName={{ worker.hostname }} SocketsPerBoard={{ master.cores }} CoresPerSocket=1 State=Cloud {{ sl.append(worker.hostname) }}
 {% endfor %}
 
 # PARTITION CONFIGURATIONS
@@ -45,7 +45,7 @@ SlurmdLogFile=/var/log/slurm-llnl/slurmd.log
 # ansible_distribution_version {{ ansible_distribution_version }}
 
 # STATE INFO
-{% if ansible_distribution == 'Debian' and ansible_distribution_release == 'buster' %}
+{% if ( ansible_distribution == 'Ubuntu' and ansible_distribution_release == 'focal' ) or ( ansible_distribution == 'Debian' and ansible_distribution_release == 'buster' ) %}
 SlurmctldPidFile=/run/slurmctld.pid
 SlurmdPidFile=/run/slurmd.pid
 {% endif %}
