--- a/bibigrid-core/src/main/resources/playbook/roles/common/templates/slurm/slurm.conf
+++ b/bibigrid-core/src/main/resources/playbook/roles/common/templates/slurm/slurm.conf
@@ -10,7 +10,7 @@ NodeName={{ master.hostname }} SocketsPerBoard={{ master.cores }} CoresPerSocket
 {% set sl = [] %}
 {% for worker in workers %}
 #NodeName={{ worker.hostname }} SocketsPerBoard={{ worker.cores }} CoresPerSocket=1 RealMemory={{ worker.memory }} {{ sl.append(worker.hostname)}}
-NodeName={{ worker.hostname }} SocketsPerBoard={{ master.cores }} CoresPerSocket=1 State=Cloud {{ sl.append(worker.hostname) }}
+NodeName={{ worker.hostname }} SocketsPerBoard={{ worker.cores }} CoresPerSocket=1 State=Cloud {{ sl.append(worker.hostname) }}
 {% endfor %}
 
 # PARTITION CONFIGURATIONS
