fix slurm config: - fix condition that distinguish between different Ubuntu versions

--- a/bibigrid-core/src/main/resources/playbook/roles/common/templates/slurm/slurm.conf
+++ b/bibigrid-core/src/main/resources/playbook/roles/common/templates/slurm/slurm.conf
@@ -48,9 +48,7 @@ SlurmdLogFile=/var/log/slurm-llnl/slurmd.log
 {% if ( ansible_distribution == 'Ubuntu' and ansible_distribution_release == 'focal' ) or ( ansible_distribution == 'Debian' and ansible_distribution_release == 'buster' ) %}
 SlurmctldPidFile=/run/slurmctld.pid
 SlurmdPidFile=/run/slurmd.pid
-{% endif %}
-
-{% if ansible_distribution == 'Ubuntu' or ( ansible_distribution == 'Debian' and ansible_distribution_release == 'stretch' ) %}
+{% else %}
 SlurmctldPidFile=/var/run/slurm-llnl/slurmctld.pid
 SlurmdPidFile=/var/run/slurm-llnl/slurmd.pid
 {% endif %}
