--- a/bibigrid-openstack/pom.xml
+++ b/bibigrid-openstack/pom.xml
@@ -26,7 +26,7 @@
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>28.0-jre</version> <!-- ToDo was 22.0 -->
+            <version>28.0-jre</version>
         </dependency>
 
 
