--- a/.github/workflows/publish_docker_dev.yml
+++ b/.github/workflows/publish_docker_dev.yml
@@ -2,7 +2,7 @@ name: Publish DEV Docker
 on: 
   push:
     branches: 
-      - 'dev'
+      - 'development'
 jobs:
   build:
     runs-on: ubuntu-latest
