--- a/bibigrid-core/src/main/resources/playbook/roles/common/tasks/001-apt.yml
+++ b/bibigrid-core/src/main/resources/playbook/roles/common/tasks/001-apt.yml
@@ -1,6 +1,6 @@
 - name: Debian based system
   debug:
-    msg : Using apt to install packages
+    msg: Using apt to install packages
 
 - name: Disable auto-update/upgrade during ansible-run
   copy:
@@ -17,7 +17,7 @@
 
 - name: Install common packages
   apt:
-    name: ["apt-transport-https","ca-certificates","curl","software-properties-common","python3-pip"]
+    name: ["apt-transport-https","ca-certificates","curl","software-properties-common","python3-pip","python3-setuptools"]
     state: "present"
 
 - name: Install OpenStack object store client
@@ -28,53 +28,53 @@
 
 # https://cloud.google.com/storage/docs/gsutil_install?hl=de#deb
 - block:
-  - name: Add Google Compute repository key
-    shell: 'curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key add -'
+    - name: Add Google Compute repository key
+      shell: 'curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key add -'
 
-  - name: Add Google Compute repository
-    apt_repository:
-      repo: "deb http://packages.cloud.google.com/apt cloud-sdk-{{ ansible_lsb.codename }} main"
-      state: present
-    register: google_repo
+    - name: Add Google Compute repository
+      apt_repository:
+        repo: "deb http://packages.cloud.google.com/apt cloud-sdk-{{ ansible_lsb.codename }} main"
+        state: present
+      register: google_repo
 
-  - name: Update apt cache for Google Compute
-    apt:
-      update_cache: 'yes'
-    when: google_repo is changed
+    - name: Update apt cache for Google Compute
+      apt:
+        update_cache: 'yes'
+      when: google_repo is changed
 
-  - name: Install Google Compute object store client
-    apt:
-      name: "google-cloud-sdk"
-      state: "present"
+    - name: Install Google Compute object store client
+      apt:
+        name: "google-cloud-sdk"
+        state: "present"
 
   when: mode == "googlecloud"
 
 # https://docs.microsoft.com/en-us/cli/azure/install-azure-cli-apt?view=azure-cli-latest
 - block:
-  - name: Add Azure repository key
-    apt_key:
-      id: 52E16F86FEE04B979B07E28DB02C46DF417A0893
-      keyserver: packages.microsoft.com
-      state: present
+    - name: Add Azure repository key
+      apt_key:
+        id: 52E16F86FEE04B979B07E28DB02C46DF417A0893
+        keyserver: packages.microsoft.com
+        state: present
 
-  - name: Add new Azure repository key
-    shell: 'curl -L https://packages.microsoft.com/keys/microsoft.asc | sudo apt-key add -'
+    - name: Add new Azure repository key
+      shell: 'curl -L https://packages.microsoft.com/keys/microsoft.asc | sudo apt-key add -'
 
-  - name: Add Azure repository
-    apt_repository:
-      repo: "deb [arch=amd64] https://packages.microsoft.com/repos/azure-cli/ {{ ansible_lsb.codename }} main"
-      state: present
-    register: azure_repo
+    - name: Add Azure repository
+      apt_repository:
+        repo: "deb [arch=amd64] https://packages.microsoft.com/repos/azure-cli/ {{ ansible_lsb.codename }} main"
+        state: present
+      register: azure_repo
 
-  - name: Update apt cache for Azure
-    apt:
-      update_cache: 'yes'
-    when: azure_repo is changed
+    - name: Update apt cache for Azure
+      apt:
+        update_cache: 'yes'
+      when: azure_repo is changed
 
-  - name: Install Azure object store client
-    apt:
-      name: "azure-cli"
-      state: "present"
+    - name: Install Azure object store client
+      apt:
+        name: "azure-cli"
+        state: "present"
 
   when: mode == "azure"
 
