fix/246: - ansible playbook:   - tags for scale-up/down (common and master role)   - task for removing delete hosts - AnsibleConfig.java:   - add function writeInstanceFile with support for deleted instances (added beside worker instances as 'deletedWorkers' to instances.yml)   - update function updateAnsibleWorkerLists to make use of a Cluster object   - adjust function rewriteInstancesFile to support deleted instances - Cluster.java: List for recently deleted hosts (default: empty list) - CreateCluster.java: use more general scale (up/down) function to reconfigure master - Scale.java: auxiliary enum for pretty programming, used by ShellScriptCreator.java - ShellScriptCreator.java: provide a general scale (up/down) function (see CreateCluster.java) - SshFactory.java: adjust log output when execute a script on master - TerminateIntent.java:   - use more general scale (up/down) function to reconfigure master (see CreateCluster.java)   - use already

--- a/bibigrid-core/src/main/resources/playbook/roles/master/tasks/002-zabbix.yml
+++ b/bibigrid-core/src/main/resources/playbook/roles/master/tasks/002-zabbix.yml
@@ -200,3 +200,22 @@
         port: 10050
   with_items:
     - "{{ workers }}"
+  tags: ["scale-up"]
+
+# --------------------------------------
+# -- Remove deleted worker nodes as zabbix hosts --
+# --------------------------------------
+
+- name: Remove deleted worker nodes as zabbix hosts
+  zabbix_host:
+    server_url:  "http://{{ master.ip }}/zabbix/"
+    login_user: Admin
+    login_password: "{{ zabbix.admin_password }}"
+    host_name: "{{ item.hostname }}"
+    visible_name: "{{ item.hostname }}"
+    description: removed by ansible
+    status: disabled
+    state: absent
+  with_items:
+    - "{{ deletedWorkers }}"
+  tags: ["scale-down"]
