--- a/bibigrid-core/src/main/resources/playbook/roles/master/tasks/main.yml
+++ b/bibigrid-core/src/main/resources/playbook/roles/master/tasks/main.yml
@@ -45,7 +45,7 @@
   - include: 021-slurm.yml
   when:
     - enable_slurm == 'yes'
-  tags: ["master-slurm","slurm"]
+  tags: ["master-slurm","slurm","scale-up","scale-down"]
 
 - debug:
     msg: "[BIBIGRID] Setup Theia"
