--- a/bibigrid-core/src/main/resources/playbook/roles/common/tasks/main.yml
+++ b/bibigrid-core/src/main/resources/playbook/roles/common/tasks/main.yml
@@ -56,7 +56,7 @@
   - include: 041-slurm.yml
   when:
     - enable_slurm == 'yes'
-  tags: ['slurm',"common-slurm"]
+  tags: ['slurm',"common-slurm","scale-up","scale-down"]
 
 - debug:
     msg: "[BIBIGRID] Measure cluster performance"
