changed slurm consumable resources config

--- a/bibigrid-core/src/main/resources/playbook/roles/common/templates/slurm/slurm.conf
+++ b/bibigrid-core/src/main/resources/playbook/roles/common/templates/slurm/slurm.conf
@@ -29,6 +29,10 @@ ClusterName=bibigrid
 SlurmctldPort=6817
 SlurmdPort=6818
 
+#Set slurm consumable resources
+SelectType=select/cons_res
+SelectTypeParameters=CR_Core
+
 # DIRECTORIES
 JobCheckpointDir=/var/lib/slurm-llnl/job_checkpoint
 SlurmdSpoolDir=/var/lib/slurm-llnl/slurmd
