--- a/bibigrid-light-rest-4j/.gitignore
+++ b/bibigrid-light-rest-4j/.gitignore
@@ -11,6 +11,7 @@ dist/
 *.tmp
 *.zip
 *.bak
+.env
 dependency-reduced-pom.xml
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
