--- a/bibigrid-light-rest-4j/pom.xml
+++ b/bibigrid-light-rest-4j/pom.xml
@@ -11,19 +11,21 @@
         <java.version>11</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.main.class>com.networknt.server.Server</project.main.class>
-        <version.light-4j>2.0.16</version.light-4j>
-        <version.jackson>2.10.4</version.jackson>
+        <version.light-4j>2.0.4</version.light-4j>
+        <version.jackson>2.9.9</version.jackson>
+        <version.jackson-databind>2.9.9.3</version.jackson-databind>
         <version.slf4j>1.7.25</version.slf4j>
         <version.jose4j>0.6.3</version.jose4j>
         <version.logback>1.2.3</version.logback>
         <version.junit>4.12</version.junit>
-        <version.undertow>2.1.3.Final</version.undertow>
-        <version.json-schema-validator>1.0.29</version.json-schema-validator>
-        
-        
-        
-        
-        
+        <version.undertow>2.0.23.Final</version.undertow>
+        <version.json-schema-validator>1.0.19</version.json-schema-validator>
+        <version.fastscanner>2.18.1</version.fastscanner>
+
+
+
+
+
         <versions.maven-version>2.4</versions.maven-version>
         <version.javadoc-packagelist-plugin>1.0.0</version.javadoc-packagelist-plugin>
         <version.maven-javadoc>3.1.0</version.maven-javadoc>
@@ -37,6 +39,13 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <!-- dependecy for mocking environment vars for tests-->
+            <groupId>com.github.stefanbirkner</groupId>
+            <artifactId>system-rules</artifactId>
+            <version>1.19.0</version>
+            <scope>test</scope>
+        </dependency>
         <dependency>
             <groupId>com.networknt</groupId>
             <artifactId>config</artifactId>
@@ -102,7 +111,7 @@
             <artifactId>metrics</artifactId>
             <version>${version.light-4j}</version>
         </dependency>
-        
+
         <dependency>
             <groupId>com.networknt</groupId>
             <artifactId>handler</artifactId>
@@ -191,7 +200,7 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>${version.jackson}</version>
+            <version>${version.jackson-databind}</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
@@ -213,10 +222,15 @@
             <artifactId>undertow-core</artifactId>
             <version>${version.undertow}</version>
         </dependency>
-        
-        
-        
-        
+        <dependency>
+            <groupId>io.github.lukehutch</groupId>
+            <artifactId>fast-classpath-scanner</artifactId>
+            <version>${version.fastscanner}</version>
+        </dependency>
+
+
+
+
         <!-- Test Dependencies -->
         <dependency>
             <groupId>junit</groupId>
@@ -224,7 +238,25 @@
             <version>${version.junit}</version>
             <scope>test</scope>
         </dependency>
-        
+        <dependency>
+            <groupId>de.unibi.cebitec.bibigrid</groupId>
+            <artifactId>bibigrid-core</artifactId>
+            <version>2.1.1</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>de.unibi.cebitec.bibigrid</groupId>
+            <artifactId>bibigrid-openstack</artifactId>
+            <version>2.1.1</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>de.unibi.cebitec.bibigrid</groupId>
+            <artifactId>bibigrid-main</artifactId>
+            <version>2.1.1</version>
+            <scope>compile</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -324,16 +356,6 @@
     </build>
 
 
-    <repositories>
-        <repository>
-            <id>sonatype-snapshots</id>
-            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-        </repository>
-    </repositories>
-
     <profiles>
         <profile>
             <id>release</id>
@@ -355,7 +377,6 @@
                                         <filter>
                                             <artifact>*:*</artifact>
                                             <excludes>
-                                                <exclude>module-info.class</exclude>
                                                 <exclude>META-INF/*.SF</exclude>
                                                 <exclude>META-INF/*.DSA</exclude>
                                                 <exclude>META-INF/*.RSA</exclude>
