(re-)add RealMemory option to Slurm configuration -> fix #178

--- a/bibigrid-core/src/main/resources/playbook/roles/common/templates/slurm/slurm.conf
+++ b/bibigrid-core/src/main/resources/playbook/roles/common/templates/slurm/slurm.conf
@@ -5,12 +5,11 @@ CryptoType=crypto/munge
 SlurmUser=slurm
 
 # NODE CONFIGURATIONS
-#NodeName={{ master.hostname }} SocketsPerBoard={{ master.cores }} CoresPerSocket=1 RealMemory={{ master.memory }}
-NodeName={{ master.hostname }} SocketsPerBoard={{ master.cores }} CoresPerSocket=1
+NodeName={{ master.hostname }} SocketsPerBoard={{ master.cores }} CoresPerSocket=1 RealMemory={% if master.memory < 16384 %}{{ master.memory - 512 }}{% endif %}{% if master.memory > 16383 %}{{ master.memory - 1024 }}{% endif %}
+
 {% set sl = [] %}
 {% for worker in workers %}
-#NodeName={{ worker.hostname }} SocketsPerBoard={{ worker.cores }} CoresPerSocket=1 RealMemory={{ worker.memory }} {{ sl.append(worker.hostname)}}
-NodeName={{ worker.hostname }} SocketsPerBoard={{ worker.cores }} CoresPerSocket=1 State=Cloud {{ sl.append(worker.hostname) }}
+NodeName={{ worker.hostname }} SocketsPerBoard={{ worker.cores }} CoresPerSocket=1 RealMemory={% if worker.memory < 16384 %}{{ worker.memory - 512 }}{% endif %}{% if worker.memory > 16383 %}{{ worker.memory - 1024 }}{% endif %} {{ sl.append(worker.hostname)}}
 {% endfor %}
 
 # PARTITION CONFIGURATIONS
