fix(Docker):fixed github docker push action

--- a/.github/workflows/publish_docker_release.yml
+++ b/.github/workflows/publish_docker_release.yml
@@ -16,11 +16,11 @@ jobs:
       with:
         java-version: '11.0.5'
     - name: Build mvn bibigrid
-      run: mvn -P openstack  clean package -DskipTests
+        run: mvn -P openstack  clean install -DskipTests
     - name: Build rest api mvn
-      run:  |
-          cd bibigrid-light-rest-4j/
-          mvn clean install -Prelease -DskipTests
+        run:  |
+              cd bibigrid-light-rest-4j/
+              mvn clean install -Prelease -DskipTests
     - name: Publish to Registry
       uses: elgohr/Publish-Docker-Github-Action@master
       with:
