--- a/.github/workflows/publish_docker_dev.yml
+++ b/.github/workflows/publish_docker_dev.yml
@@ -13,11 +13,11 @@ jobs:
       with:
         java-version: '11.0.5'
     - name: Build mvn bibigrid
-      run: mvn -P openstack  clean package
+      run: mvn -P openstack  clean install -DskipTests
     - name: Build rest api mvn
       run:  |
           cd bibigrid-light-rest-4j/
-          mvn clean install -Prelease
+          mvn clean install -Prelease -DskipTests
     - name: Publish to Registry
       uses: elgohr/Publish-Docker-Github-Action@master
       with:
