--- a/bibigrid-core/src/main/resources/playbook/roles/master/defaults/main.yml
+++ b/bibigrid-core/src/main/resources/playbook/roles/master/defaults/main.yml
@@ -4,3 +4,4 @@ theia_version: "1.3.0"
 theia_ide_install_dir: /opt/theia-ide
 theia_ide_bind_address: localhost
 theia_ide_bind_port: 8181
+theia_ide_use_prebuild: "yes"
