add support to install prebuild  theia-ide (fix #260) readd support for --ide

--- a/bibigrid-core/src/main/resources/playbook/roles/master/tasks/999-theia.yml
+++ b/bibigrid-core/src/main/resources/playbook/roles/master/tasks/999-theia.yml
@@ -52,7 +52,7 @@
     creates: "{{ theia_ide_install_dir }}"
   when: theia_ide_use_prebuild == "yes"
 
-block:
+- block:
   - name: Create IDE build dir
     file:
       path: "{{ theia_ide_install_dir }}"
