--- a/.github/workflows/publish_docker_dev.yml
+++ b/.github/workflows/publish_docker_dev.yml
@@ -13,9 +13,10 @@ jobs:
       with:
         java-version: '11.0.5'
     - name: Build mvn bibigrid
-      run: mvn -P openstack  clean install -DskipTests
+      run: |
+          mvn -P openstack clean install -DskipTests
     - name: Build rest api mvn
-      run:  |
+      run: |
           cd bibigrid-light-rest-4j/
           mvn clean install -Prelease -DskipTests
     - name: Publish to Registry
