fix reopened #178 : adjust free  real memory calculation for slurm

--- a/bibigrid-core/src/main/resources/playbook/roles/common/templates/slurm/slurm.conf
+++ b/bibigrid-core/src/main/resources/playbook/roles/common/templates/slurm/slurm.conf
@@ -5,11 +5,13 @@ CryptoType=crypto/munge
 SlurmUser=slurm
 
 # NODE CONFIGURATIONS
-NodeName={{ master.hostname }} SocketsPerBoard={{ master.cores }} CoresPerSocket=1 RealMemory={% if master.memory < 16384 %}{{ master.memory - 512 }}{% endif %}{% if master.memory > 16383 %}{{ master.memory - 1024 }}{% endif %}
+{% set mem = master.memory // 1024 * 1000 %}
+NodeName={{ master.hostname }} SocketsPerBoard={{ master.cores }} CoresPerSocket=1 RealMemory={{ mem - [mem // 2, 16000] | min }}
 
 {% set sl = [] %}
 {% for worker in workers %}
-NodeName={{ worker.hostname }} SocketsPerBoard={{ worker.cores }} CoresPerSocket=1 RealMemory={% if worker.memory < 16384 %}{{ worker.memory - 512 }}{% endif %}{% if worker.memory > 16383 %}{{ worker.memory - 1024 }}{% endif %} {{ sl.append(worker.hostname)}}
+{% set mem = worker.memory // 1024 * 1000 %}
+NodeName={{ worker.hostname }} SocketsPerBoard={{ worker.cores }} CoresPerSocket=1 RealMemory={% if mem < 16000 %}{{ mem - [ mem // 16, 512] | max }}{% endif %}{% if mem > 16000 %}{{ mem - [mem // 16, 4000] | min }}{% endif %} {{ sl.append(worker.hostname)}}
 {% endfor %}
 
 # PARTITION CONFIGURATIONS
