adjust github dev workflow

--- a/.github/workflows/publish_docker_dev.yml
+++ b/.github/workflows/publish_docker_dev.yml
@@ -13,7 +13,8 @@ jobs:
       with:
         java-version: '11.0.5'
     - name: Build mvn bibigrid
-      run: mvn -P openstack  clean package
+      run: |
+           mvn -P openstack clean install
     - name: Build rest api mvn
       run: |
            cd bibigrid-light-rest-4j/
