--- a/.github/workflows/publish_docker_release.yml
+++ b/.github/workflows/publish_docker_release.yml
@@ -16,7 +16,8 @@ jobs:
       with:
         java-version: '11.0.5'
     - name: Build mvn bibigrid
-      run: mvn -P openstack  clean package -DskipTests
+      run: |
+           mvn -P openstack clean install 
     - name: Build rest api mvn
       run: |
            cd bibigrid-light-rest-4j/
